[gd_scene load_steps=31 format=3 uid="uid://xcres5ejy5ij"]

[ext_resource type="Texture2D" uid="uid://chfouaj1dv6m3" path="res://Sky.png" id="1_345je"]
[ext_resource type="Script" path="res://scripts/level.gd" id="1_f3a4w"]
[ext_resource type="Script" path="res://scripts/player.gd" id="2_f57ef"]
[ext_resource type="Texture2D" uid="uid://dd8qwweqqc4l5" path="res://textures/Grass006_1K-JPG_NormalGL.jpg" id="2_fkv1a"]
[ext_resource type="Texture2D" uid="uid://bhpnyjihm0wsx" path="res://textures/Grass006_1K-JPG_AmbientOcclusion.jpg" id="2_mqq20"]
[ext_resource type="Script" path="res://scripts/camera_3d.gd" id="3_6jy2j"]
[ext_resource type="Texture2D" uid="uid://b5foyu7wgqwe7" path="res://textures/Grass006_1K-JPG_Roughness.jpg" id="3_e0lck"]
[ext_resource type="PackedScene" uid="uid://bwttfc5s5dpl0" path="res://assets/player.tscn" id="3_v54k7"]
[ext_resource type="MeshLibrary" uid="uid://cac1a0mrwh6rn" path="res://assets/blockLibrary.tres" id="8_ba1gf"]
[ext_resource type="MeshLibrary" uid="uid://drfivxd6gi8oy" path="res://assets/treeLibrary.tres" id="9_rbprt"]
[ext_resource type="MeshLibrary" uid="uid://duxd6owckcilc" path="res://assets/BenchLibrary.tres" id="10_32hqf"]
[ext_resource type="MeshLibrary" uid="uid://x1ik11n6vuy5" path="res://assets/FountainLibrary.tres" id="11_tasbm"]
[ext_resource type="MeshLibrary" uid="uid://d2b83j343mcgb" path="res://assets/flowersLibrary.tres" id="12_ywhs4"]
[ext_resource type="PackedScene" uid="uid://dljbeee6085al" path="res://assets/gold.tscn" id="13_lhsah"]
[ext_resource type="PackedScene" uid="uid://nltubsko4ttc" path="res://assets/coin.tscn" id="14_so034"]
[ext_resource type="Texture2D" uid="uid://dy8siiftjn37p" path="res://sprite/Gold.png" id="14_tv1a4"]
[ext_resource type="PackedScene" uid="uid://cnm0mw0i7hf2n" path="res://assets/chest_blender.tscn" id="14_uu7oe"]
[ext_resource type="Texture2D" uid="uid://bu1brjn7b57rd" path="res://sprite/stylized_coin.png" id="15_6d10i"]
[ext_resource type="Texture2D" uid="uid://dm2jr11l7xikj" path="res://sprite/chestBlender.png" id="16_lx06i"]
[ext_resource type="Script" path="res://scripts/gold_counter.gd" id="17_yd5ap"]
[ext_resource type="Script" path="res://scripts/chest_counter.gd" id="18_vssgk"]
[ext_resource type="Script" path="res://scripts/coin_counter.gd" id="19_k0c4k"]
[ext_resource type="PackedScene" uid="uid://dvmc7askhy0eu" path="res://endScreen.tscn" id="23_n2w1e"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_rdef4"]
panorama = ExtResource("1_345je")

[sub_resource type="Sky" id="Sky_nqqjk"]
sky_material = SubResource("PanoramaSkyMaterial_rdef4")

[sub_resource type="Environment" id="Environment_aqkwo"]
background_mode = 2
sky = SubResource("Sky_nqqjk")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="BoxShape3D" id="BoxShape3D_1wh4b"]
size = Vector3(40, 1, 40)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jc3j6"]
albedo_color = Color(0.0588235, 0.513726, 0, 1)
roughness_texture = ExtResource("3_e0lck")
normal_enabled = true
normal_texture = ExtResource("2_fkv1a")
ao_enabled = true
ao_texture = ExtResource("2_mqq20")
uv1_scale = Vector3(3, 3, 3)

[sub_resource type="BoxMesh" id="BoxMesh_mr0lk"]
material = SubResource("StandardMaterial3D_jc3j6")
size = Vector3(40, 1, 40)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_vqak1"]

[node name="Level" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0571251, 0)
script = ExtResource("1_f3a4w")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_aqkwo")

[node name="Floor" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.522034, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
shape = SubResource("BoxShape3D_1wh4b")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.059615, 0)
mesh = SubResource("BoxMesh_mr0lk")

[node name="player" parent="." instance=ExtResource("3_v54k7")]
transform = Transform3D(0.0811183, 0, -1.4978, 0, 1.5, 0, 1.4978, 0, 0.0811183, 0, 0.79086, 0)
script = ExtResource("2_f57ef")

[node name="Camera3D" type="Camera3D" parent="." node_paths=PackedStringArray("target", "ray_cast")]
transform = Transform3D(-1, -1.51808e-08, 8.60946e-08, 0, 0.984808, 0.173648, -8.74228e-08, 0.173648, -0.984808, 7.15256e-06, 3.45843, -18.3192)
fov = 47.8
near = 0.097
script = ExtResource("3_6jy2j")
target = NodePath("../player")
camera_offset = Vector3(-5, 10, -12)
ray_cast = NodePath("RayCast3D")

[node name="RayCast3D" type="RayCast3D" parent="Camera3D"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.859603, 0.510963, 0, -0.00458381, 0.00771144, 0.99996, 0.510943, -0.859568, 0.00897093, 0, 6.92891, 0)
shadow_enabled = true

[node name="Block" type="GridMap" parent="."]
mesh_library = ExtResource("8_ba1gf")
cell_size = Vector3(2, 0.5, 2)
data = {
"cells": PackedInt32Array(9, 65526, 0, 9, 65527, 0, 9, 65528, 0, 9, 65529, 0, 9, 65530, 0, 9, 65531, 0, 9, 65532, 0, 9, 65533, 0, 9, 65534, 0, 9, 0, 0, 9, 65535, 0, 9, 1, 0, 9, 2, 0, 9, 3, 0, 9, 4, 0, 9, 5, 0, 9, 6, 0, 9, 7, 0, 9, 8, 0, 9, 9, 0, 8, 9, 0, 7, 9, 0, 6, 9, 0, 5, 9, 0, 4, 9, 0, 3, 9, 0, 2, 9, 0, 1, 9, 0, 0, 9, 0, 65535, 9, 0, 65534, 9, 0, 65533, 9, 0, 65532, 9, 0, 65531, 9, 0, 65530, 9, 0, 65529, 9, 0, 65528, 9, 0, 65527, 9, 0, 65526, 9, 0, 65525, 9, 0, 65525, 8, 0, 65525, 7, 0, 65525, 6, 0, 65525, 5, 0, 65525, 4, 0, 65525, 3, 0, 65525, 2, 0, 65525, 0, 0, 65525, 1, 0, 65525, 65535, 0, 65525, 65533, 0, 65525, 65534, 0, 65525, 65532, 0, 65525, 65530, 0, 65525, 65531, 0, 65525, 65529, 0, 65525, 65528, 0, 65525, 65527, 0, 65525, 65526, 0, 65526, 65526, 0, 65527, 65526, 0, 65528, 65526, 0, 65529, 65526, 0, 65530, 65526, 0, 65531, 65526, 0, 65533, 65526, 0, 65532, 65526, 0, 8, 65526, 0, 7, 65526, 0, 6, 65526, 0, 5, 65526, 0, 4, 65526, 0, 3, 65526, 0, 2, 65526, 0, 1, 65526, 0, 0, 65526, 0, 65535, 65526, 0, 65534, 65526, 0)
}
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="Tree" type="GridMap" parent="."]
mesh_library = ExtResource("9_rbprt")
physics_material = SubResource("PhysicsMaterial_vqak1")
data = {
"cells": PackedInt32Array(8, 65532, 0, 65529, 8, 0, 65531, 65531, 0, 5, 65527, 0, 3, 2, 0, 65528, 2, 0, 7, 6, 0, 65529, 7, 0, 65528, 7, 0, 4, 65535, 0, 5, 65533, 0, 6, 65533, 0, 7, 65532, 0)
}
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="Bench" type="GridMap" parent="."]
mesh_library = ExtResource("10_32hqf")
cell_size = Vector3(2, 0.5, 2)
data = {
"cells": PackedInt32Array(8, 65535, 0, 8, 65529, 0, 8, 5, 0, 2, 2, 0, 4, 65527, 0)
}

[node name="Fountain" type="GridMap" parent="."]
mesh_library = ExtResource("11_tasbm")
cell_size = Vector3(2, 1.5, 2)
data = {
"cells": PackedInt32Array(65535, 2, 0, 65535, 65532, 0)
}

[node name="Flowers" type="GridMap" parent="."]
mesh_library = ExtResource("12_ywhs4")
cell_center_y = false
data = {
"cells": PackedInt32Array(65533, 65527, 0, 65527, 65534, 0, 65526, 65534, 0, 5, 8, 0, 0, 8, 0, 8, 2, 0, 65534, 65528, 0, 65533, 65529, 0, 65534, 65527, 0, 65534, 65529, 0, 65532, 65529, 0, 65532, 65527, 0, 9, 65528, 0, 8, 65528, 0, 7, 65528, 0, 7, 65527, 0)
}

[node name="Coins" type="Node" parent="."]

[node name="coinHolder" type="Node3D" parent="Coins"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.26732, -0.349537, -0.700885)

[node name="stylized_coin" parent="Coins/coinHolder" instance=ExtResource("14_so034")]

[node name="coinHolder5" type="Node3D" parent="Coins"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17.5672, -0.349537, -17.0726)

[node name="stylized_coin" parent="Coins/coinHolder5" instance=ExtResource("14_so034")]

[node name="coinHolder4" type="Node3D" parent="Coins"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -17.8409, -0.349537, -0.700885)

[node name="stylized_coin" parent="Coins/coinHolder4" instance=ExtResource("14_so034")]

[node name="coinHolder3" type="Node3D" parent="Coins"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.9008, -0.349537, 12.292)

[node name="stylized_coin" parent="Coins/coinHolder3" instance=ExtResource("14_so034")]

[node name="coinHolder2" type="Node3D" parent="Coins"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.0148, -0.349537, -14.9473)

[node name="stylized_coin" parent="Coins/coinHolder2" instance=ExtResource("14_so034")]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="Gold" type="Sprite2D" parent="Control"]
position = Vector2(1005, 37)
scale = Vector2(0.165625, 0.175)
texture = ExtResource("14_tv1a4")

[node name="Coin" type="Sprite2D" parent="Control"]
position = Vector2(1008, 103)
scale = Vector2(0.245312, 0.25625)
texture = ExtResource("15_6d10i")

[node name="Chest" type="Sprite2D" parent="Control"]
position = Vector2(1012, 172)
scale = Vector2(0.235937, 0.209375)
texture = ExtResource("16_lx06i")

[node name="GoldX" type="Label" parent="Control"]
layout_mode = 0
offset_left = 1043.0
offset_top = 17.0
offset_right = 1076.0
offset_bottom = 69.0
theme_override_colors/font_color = Color(0.653, 0.561675, 0, 1)
theme_override_font_sizes/font_size = 30
text = "x "

[node name="ChestX" type="Label" parent="Control"]
layout_mode = 0
offset_left = 1045.0
offset_top = 146.0
offset_right = 1078.0
offset_bottom = 198.0
theme_override_colors/font_color = Color(0.653, 0.561675, 0, 1)
theme_override_font_sizes/font_size = 30
text = "x "

[node name="CoinX" type="Label" parent="Control"]
layout_mode = 0
offset_left = 1043.0
offset_top = 80.0
offset_right = 1076.0
offset_bottom = 132.0
theme_override_colors/font_color = Color(0.653, 0.561675, 0, 1)
theme_override_font_sizes/font_size = 30
text = "x "

[node name="GoldCounter" type="Label" parent="Control"]
layout_mode = 0
offset_left = 1067.0
offset_top = 18.0
offset_right = 1124.0
offset_bottom = 64.0
theme_override_colors/font_color = Color(0.654902, 0.560784, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Q"
script = ExtResource("17_yd5ap")

[node name="ChestCounter" type="Label" parent="Control"]
layout_mode = 0
offset_left = 1069.0
offset_top = 144.0
offset_right = 1126.0
offset_bottom = 190.0
theme_override_colors/font_color = Color(0.654902, 0.560784, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Q"
script = ExtResource("18_vssgk")

[node name="CoinCounter" type="Label" parent="Control"]
layout_mode = 0
offset_left = 1069.0
offset_top = 81.0
offset_right = 1126.0
offset_bottom = 127.0
theme_override_colors/font_color = Color(0.654902, 0.560784, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Q"
script = ExtResource("19_k0c4k")

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 1102.0
offset_top = 20.0
offset_right = 1140.0
offset_bottom = 68.0
theme_override_colors/font_color = Color(0.654902, 0.560784, 0, 1)
theme_override_font_sizes/font_size = 30
text = "/ 5"

[node name="Label3" type="Label" parent="Control"]
layout_mode = 0
offset_left = 1098.0
offset_top = 144.0
offset_right = 1137.0
offset_bottom = 195.0
theme_override_colors/font_color = Color(0.654902, 0.560784, 0, 1)
theme_override_font_sizes/font_size = 30
text = "/ 5"

[node name="Label2" type="Label" parent="Control"]
layout_mode = 0
offset_left = 1100.0
offset_top = 83.0
offset_right = 1139.0
offset_bottom = 131.0
theme_override_colors/font_color = Color(0.654902, 0.560784, 0, 1)
theme_override_font_sizes/font_size = 30
text = "/ 5"

[node name="TimeLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 41.0
offset_top = 27.0
offset_right = 174.0
offset_bottom = 70.0
theme_override_colors/font_color = Color(0.654902, 0.560784, 0, 1)
theme_override_font_sizes/font_size = 30
text = "a"

[node name="Chest" type="Node" parent="."]

[node name="chestHolder" type="Node3D" parent="Chest"]

[node name="chestBlender" parent="Chest/chestHolder" instance=ExtResource("14_uu7oe")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.14532, 0, -9.151)

[node name="chestHolder5" type="Node3D" parent="Chest"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.7521, 0, 12.6354)

[node name="chestBlender" parent="Chest/chestHolder5" instance=ExtResource("14_uu7oe")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.14532, 0, -9.151)

[node name="chestHolder4" type="Node3D" parent="Chest"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.9164, 0, 25.9702)

[node name="chestBlender" parent="Chest/chestHolder4" instance=ExtResource("14_uu7oe")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.14532, 0, -9.151)

[node name="chestHolder2" type="Node3D" parent="Chest"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.9399, 0, 25.0747)

[node name="chestBlender" parent="Chest/chestHolder2" instance=ExtResource("14_uu7oe")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.14532, 0, -9.151)

[node name="chestHolder3" type="Node3D" parent="Chest"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.345, 0, -7.74522)

[node name="chestBlender" parent="Chest/chestHolder3" instance=ExtResource("14_uu7oe")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.14532, 0, -9.151)

[node name="Gold" type="Node" parent="."]

[node name="goldHoder" type="Node3D" parent="Gold"]

[node name="Gold" parent="Gold/goldHoder" instance=ExtResource("13_lhsah")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16.204, 0.24123, -5.64818)

[node name="goldHoder5" type="Node3D" parent="Gold"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -28.2122, 0, 11.9739)

[node name="Gold" parent="Gold/goldHoder5" instance=ExtResource("13_lhsah")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.2218, 0.24123, -7.46954)

[node name="goldHoder4" type="Node3D" parent="Gold"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -16.6795, 0, 19.0619)

[node name="Gold" parent="Gold/goldHoder4" instance=ExtResource("13_lhsah")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.2218, 0.24123, -7.46954)

[node name="goldHoder3" type="Node3D" parent="Gold"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -21.5975, 0, 0)

[node name="Gold" parent="Gold/goldHoder3" instance=ExtResource("13_lhsah")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.2218, 0.24123, -7.46954)

[node name="goldHoder2" type="Node3D" parent="Gold"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.4506, 0, -9.9258)

[node name="Gold" parent="Gold/goldHoder2" instance=ExtResource("13_lhsah")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.2218, 0.24123, -6.78292)

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[node name="EndScreen" parent="." instance=ExtResource("23_n2w1e")]
visible = false

[connection signal="coinCollected" from="Coins/coinHolder/stylized_coin" to="." method="_on_coin_collected"]
[connection signal="coinCollected" from="Coins/coinHolder/stylized_coin" to="Control/CoinCounter" method="_on_coin_collected"]
[connection signal="coinCollected" from="Coins/coinHolder5/stylized_coin" to="." method="_on_coin_collected"]
[connection signal="coinCollected" from="Coins/coinHolder5/stylized_coin" to="Control/CoinCounter" method="_on_coin_collected"]
[connection signal="coinCollected" from="Coins/coinHolder4/stylized_coin" to="." method="_on_coin_collected"]
[connection signal="coinCollected" from="Coins/coinHolder4/stylized_coin" to="Control/CoinCounter" method="_on_coin_collected"]
[connection signal="coinCollected" from="Coins/coinHolder3/stylized_coin" to="." method="_on_coin_collected"]
[connection signal="coinCollected" from="Coins/coinHolder3/stylized_coin" to="Control/CoinCounter" method="_on_coin_collected"]
[connection signal="coinCollected" from="Coins/coinHolder2/stylized_coin" to="." method="_on_coin_collected"]
[connection signal="coinCollected" from="Coins/coinHolder2/stylized_coin" to="Control/CoinCounter" method="_on_coin_collected"]
[connection signal="chestCollected" from="Chest/chestHolder/chestBlender" to="." method="_on_chest_collected"]
[connection signal="chestCollected" from="Chest/chestHolder/chestBlender" to="Control/ChestCounter" method="_on_chest_blender_chest_collected"]
[connection signal="chestCollected" from="Chest/chestHolder5/chestBlender" to="." method="_on_chest_collected"]
[connection signal="chestCollected" from="Chest/chestHolder5/chestBlender" to="Control/ChestCounter" method="_on_chest_blender_chest_collected"]
[connection signal="chestCollected" from="Chest/chestHolder4/chestBlender" to="." method="_on_chest_collected"]
[connection signal="chestCollected" from="Chest/chestHolder4/chestBlender" to="Control/ChestCounter" method="_on_chest_blender_chest_collected"]
[connection signal="chestCollected" from="Chest/chestHolder2/chestBlender" to="." method="_on_chest_collected"]
[connection signal="chestCollected" from="Chest/chestHolder2/chestBlender" to="Control/ChestCounter" method="_on_chest_blender_chest_collected"]
[connection signal="chestCollected" from="Chest/chestHolder3/chestBlender" to="." method="_on_chest_collected"]
[connection signal="chestCollected" from="Chest/chestHolder3/chestBlender" to="Control/ChestCounter" method="_on_chest_blender_chest_collected"]
[connection signal="goldCollected" from="Gold/goldHoder/Gold" to="." method="_on_gold_collected"]
[connection signal="goldCollected" from="Gold/goldHoder/Gold" to="Control/GoldCounter" method="_on_gold_gold_collected"]
[connection signal="goldCollected" from="Gold/goldHoder5/Gold" to="." method="_on_gold_collected"]
[connection signal="goldCollected" from="Gold/goldHoder5/Gold" to="Control/GoldCounter" method="_on_gold_gold_collected"]
[connection signal="goldCollected" from="Gold/goldHoder4/Gold" to="." method="_on_gold_collected"]
[connection signal="goldCollected" from="Gold/goldHoder4/Gold" to="Control/GoldCounter" method="_on_gold_gold_collected"]
[connection signal="goldCollected" from="Gold/goldHoder3/Gold" to="." method="_on_gold_collected"]
[connection signal="goldCollected" from="Gold/goldHoder3/Gold" to="Control/GoldCounter" method="_on_gold_gold_collected"]
[connection signal="goldCollected" from="Gold/goldHoder2/Gold" to="." method="_on_gold_collected"]
[connection signal="goldCollected" from="Gold/goldHoder2/Gold" to="Control/GoldCounter" method="_on_gold_gold_collected"]
